# xllm

./: CMakeLists.txt  MANIFEST.in  README.md  README_zh.md  RELEASE.md  setup.py
.agents/skills/tilelang-ascend-kernel/: SKILL.md
.github/workflows/: build_arm_64_npu.yaml  build_docs.yaml  build_x86_64_cuda.yaml  build_x86_64_ilu.yaml  build_x86_64_mlu.yaml  build_x86_64_npu.yaml  deploy_docs.yaml
cibuild/: build_mlu.sh
cmake/: cc_test.cmake
docker/: Dockerfile.cuda
docs/: README.md  README_zh.md  astro.config.mjs  package-lock.json  package.json
docs/en/: supported_models.md
docs/en/features/: graph_mode.md  graph_mode_multi_shape_memory_reuse.md
docs/project/: README_zh.md
docs/public/: site.webmanifest
docs/src/: env.d.ts
docs/src/components/: Favicons.astro  Head.astro  Header.astro  PageTitle.astro  SiteTitle.astro
docs/src/pages/: index.astro
docs/src/plugins/: rehypeSimpleIcons.mjs
docs/zh/: supported_models.md
examples/: generate_vlm.py
scripts/build_support/: env.py
tests/: pybind_public_cp_api_test.py
tests/api_service/: CMakeLists.txt  chat_json_parser_test.cpp  completion_json_parser_test.cpp
tests/function_call/: deepseekv32_detector_test.cpp  glm47_detector_test.cpp
tools/: export_mtp.py
xllm/: __init__.py  launch_server.py  xllm.cpp
xllm/api_service/: CMakeLists.txt  api_service.cpp  chat_json_parser.cpp  chat_json_utils.h  chat_json_utils_test.cpp  chat_service_impl.cpp  completion_json_parser.cpp  completion_json_parser.h  completion_service_impl.cpp  embedding_service_impl.cpp  models_service_impl.cpp
xllm/c_api/: README.md  default.h  types.h
xllm/cc_api/: README.md  llm.cpp  types.h
xllm/core/: CMakeLists.txt
xllm/core/layers/dcu/: CMakeLists.txt  deepseek_v2_attention.cpp  deepseek_v2_attention.h  flash_attention.cpp  flash_attention.h  fused_moe.cpp  fused_moe.h  qwen3_5_decoder_layer.cpp  qwen3_5_decoder_layer.h  qwen3_5_gated_delta_net.cpp  qwen3_5_gated_delta_net.h  qwen3_gated_delta_net_base.cpp  qwen3_gated_delta_net_base.h  torch_attention.cpp  torch_attention.h
xllm/core/triton_jit/: CMakeLists.txt
xllm/core/triton_jit/include/: arg.h  arg_pack.h  backend.h  dtype.h  jit_kernel.h  spec.h  types.h
xllm/core/triton_jit/include/backends/: mlu_backend.h
xllm/core/triton_jit/scripts/: triton_compile.py
xllm/core/triton_jit/src/: backend.cpp  jit_kernel.cpp  mlu_backend.cpp  spec.cpp
xllm/function_call/: deepseekv32_detector.cpp  function_call_parser.cpp  glm47_detector.cpp  glm47_detector.h
xllm/models/: CMakeLists.txt  model_registry.cpp  models.h  py_model_helper.cpp  py_model_helper.h
xllm/models/dit/: pipeline_longcat_image_edit.h
xllm/models/dit/autoencoders/: autoencoder_kl_qwenimage.h  autoencoder_kl_wan.h
xllm/models/dit/npu/qwen_image_edit/: pipeline_qwenimage_edit_plus.h
xllm/models/dit/pipelines/: pipeline_longcat_image.h  pipeline_longcat_image_edit.h  pipeline_qwenimage_edit_plus.h  pipeline_wan_i2v.h
xllm/models/dit/processors/: vae_image_processor.h
xllm/models/dit/transformers/: transformer_qwen_image.h  transformer_wan.h
xllm/models/dit/utils/: sequence_parallel_pad_manager.h  sparse_attention.h  vae_spatial_parallel.h
xllm/models/flux/: pipeline_flux.h
xllm/models/llm/: deepseek_v3.h  deepseek_v32.h  deepseek_v4.h  deepseek_v4_mtp.h  mtp_model_base.h  py_causal_lm.cpp  py_causal_lm.h
xllm/models/llm/mlu/: deepseek_v4.h  deepseek_v4_base.h  deepseek_v4_mtp.h
xllm/models/llm/musa/: qwen3.h
xllm/models/llm/npu/: deepseek_v32.h  glm5_moe.h  glm5_moe_mtp.h  qwen3.h  qwen3_dflash.h  qwen3_moe.h
xllm/models/vlm/: qwen2_5_vl.h  qwen3_5.h  qwen3_vl_base.h
xllm/processors/: qwen2_vl_image_processor.cpp
xllm/proto/: chat.proto  completion.proto  disagg_pd.proto  multimodal.proto  worker.proto
xllm/pybind/: args.py  bind.cpp  embedding.py  llm.py  vlm.py
xllm/python/: __init__.py  registry.py
(+587 files in other folders)
